--- a/COWBOYCARTER.html
+++ b/COWBOYCARTER.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="HEADER">
-    <p><a href="HOME.html">HOME</a></p>
+    <p><a href="index.html">HOME</a></p>
     <p><a href="Albums.html">ALBUMS</a></p>
     <p>TOURS</p>
     <p>ACCOUNT</p>
@@ -69,4 +69,5 @@ to the overlooked contributions of the pioneers who shaped those genres. Its lyr
     </div>
 
 </body>
+
 </html>
