--- a/Albums.html
+++ b/Albums.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="HEADER">
-    <p><a href="HOME.html">HOME</a></p>
+    <p><a href="index.html">HOME</a></p>
     <p>TOURS</p>
     <p>ACCOUNT</p>
     </div>
@@ -86,4 +86,5 @@
 </div>
 
 </body>
+
 </html>
